--- a/index.html
+++ b/index.html
@@ -2,53 +2,88 @@
 <html>
 <head>
     <meta charset="utf-8">
-<link rel="stylesheet" href="./styles.css">
-   <script type="text/javascript" src="./script-ajax.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script type="text/javascript" src="./script-ajax.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body onload="callApi()">
 
-<div >
-  <table class="textAlignCenter" >
+<div>
 
-    <tbody id="data">
+    <table class="textAlignCenter">
 
-    </tbody>
-  </table>
-     <table class="table1">
+        <tbody id="data">
+        <tr>
+        <div>
+                <div id="data0">
 
-    <tbody id="data1">
+                </div>
 
-    </tbody>
-  </table>
+            </div>
+        </tr>
+
+        <tr>
+
+            <div class="wrapper">
+                <i id="left" class="fa-solid fa-angle-left" onclick="moveLeft('left')"></i>
+                <div class="carousel" id="carousel" onmousedown="dragStart(event)">
+
+                </div>
+                <i id="right" class="fa-solid fa-angle-right" onclick="moveRight('right')"></i>
+
+            </div>
+        </tr>
+          <tr>
+            <div class="wrapper">
+                <i class="fa-solid fa-angle-left" ></i>
+                <div class="carousel" id="data1" >
+
+                </div>
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+
+        </tr>
+        <tr>
+            <div class="wrapper">
+                <i class="fa-solid fa-angle-left" ></i>
+                <div class="carousel" id="data2" >
+
+                </div>
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+
+        </tr>
+        <tr>
+            <div class="wrapper">
+                <i class="fa-solid fa-angle-left" ></i>
+                <div class="carousel" id="data3" >
+
+                </div>
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+
+        </tr>
+        </tbody>
     </table>
-     <table class="table2">
 
-    <tbody id="data2">
-
-    </tbody>
-  </table>
-    <table class="table3">
-
-    <tbody id="data3">
-
-    </tbody>
-  </table>
-     <table class="table4">
-
-    <tbody id="data4">
-
-    </tbody>
-  </table>
 </div>
 
 
-<div class="modal" role="alert" id="model1">
-    <div id="infos"></div>
-  <button class="close" role="button" onclick="closeModal()">X</button>
+<div class="modal" id="modal">
+    <div class="modal-content">
+        <span class="modal-close" onclick="toggleModal(0)">&times;</span>
+        <div class="modal-header" id="modal-header">
+
+        </div>
+        <div class="modal-body" id="infos">
+
+        </div>
+    </div>
 </div>
-
-
-
 
 
 </body>
