--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
         <tr>
 <h>Films le mieux notés</h>
             <div class="wrapper" >
-                <i id="left" class="fa-solid fa-angle-left" onclick="moveLeft('left', 0)"></i>
-                <div class="carousel" id="carousel" onmousedown="dragStart(event)">
+                <i id="left" class="fa-solid fa-angle-left" onclick="moveSroll('left', 0)"></i>
+                <div class="carousel" id="carousel" >
 
                 </div>
-                <i id="right" class="fa-solid fa-angle-right" onclick="moveRight('right', 0)"></i>
+                <i id="right" class="fa-solid fa-angle-right" onclick="moveSroll('right', 0)"></i>
 
             </div>
         </tr>
           <tr>
               <h>Musical</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveLeft('left', 1)"></i>
-                <div class="carousel" id="data1" onmousedown="dragStart(event)" >
+                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 1)"></i>
+                <div class="carousel" id="data1" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveRight('right', 1)"></i>
+                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 1)"></i>
 
             </div>
 
@@ -60,11 +60,11 @@
         <tr>
             <h>Comedy</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveLeft('left', 2)"></i>
-                <div class="carousel" id="data2" onmousedown="dragStart(event)" >
+                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 2)"></i>
+                <div class="carousel" id="data2" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveRight('right', 2)"></i>
+                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 2)"></i>
 
             </div>
 
@@ -72,11 +72,11 @@
         <tr>
             <h>Drama</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveLeft('left', 3)"></i>
-                <div class="carousel" id="data3" onmousedown="dragStart(event)" >
+                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 3)"></i>
+                <div class="carousel" id="data3" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveLeft('right', 3)"></i>
+                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 3)"></i>
 
             </div>
 
