--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Just stream it</title>
     <link rel="stylesheet" href="./styles.css">
-    <script type="text/javascript" src="./script-ajax.js"></script>
+    <script src="./script-ajax.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -41,6 +42,7 @@
                 <div class="carousel" id="carousel" >
 
                 </div>
+
                 <i id="right" class="fa-solid fa-angle-right" onclick="moveSroll('right', 0)"></i>
 
             </div>
