Corriger le html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>Just stream it</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script-ajax.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
-<body onload="callApi()">
+<body>
  <section class="LandingPG" id="home" >
     <header>
       <a href="#" class="logo" >JustStreamIt</a>
@@ -36,7 +35,7 @@
         <tbody id="data">
 
         <tr>
-<h>Films le mieux notés</h>
+<h1>Films le mieux notés</h1>
             <div class="wrapper" >
                 <i id="left" class="fa-solid fa-angle-left" onclick="moveSroll('left', 0)"></i>
                 <div class="carousel" id="carousel" >
@@ -100,7 +99,7 @@
         </div>
     </div>
 </div>
-
-
+ <script src="./script-ajax.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
