Corriger les remarques

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <a href="#" class="logo" >JustStreamIt</a>
       <ul class="nav">
-        <li><a href="#" style="color: red;">Acceuil</a></li>
+        <li><a href="#" >Acceuil</a></li>
         <li><a href="#" >Catégories</a></li>
       </ul>
     </header>
@@ -30,30 +30,30 @@
    </section>
   </section>
 <div>
-    <table class="textAlignCenter" style="align-self: center">
+    <table class="textAlignCenter" >
 
         <tbody id="data">
 
         <tr>
-<h1>Films le mieux notés</h1>
+<h>Films le mieux notés</h>
             <div class="wrapper" >
-                <i id="left" class="fa-solid fa-angle-left" onclick="moveSroll('left', 0)"></i>
+                <i id="left" class="fa-solid fa-angle-left" ></i>
                 <div class="carousel" id="carousel" >
 
                 </div>
 
-                <i id="right" class="fa-solid fa-angle-right" onclick="moveSroll('right', 0)"></i>
+                <i id="right" class="fa-solid fa-angle-right" ></i>
 
             </div>
         </tr>
           <tr>
               <h>Musical</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 1)"></i>
+                <i class="fa-solid fa-angle-left" ></i>
                 <div class="carousel" id="data1" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 1)"></i>
+                <i class="fa-solid fa-angle-right" ></i>
 
             </div>
 
@@ -61,11 +61,11 @@
         <tr>
             <h>Comedy</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 2)"></i>
+                <i class="fa-solid fa-angle-left" ></i>
                 <div class="carousel" id="data2" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 2)"></i>
+                <i class="fa-solid fa-angle-right" ></i>
 
             </div>
 
@@ -73,11 +73,11 @@
         <tr>
             <h>Drama</h>
             <div class="wrapper">
-                <i class="fa-solid fa-angle-left" onclick="moveSroll('left', 3)"></i>
+                <i class="fa-solid fa-angle-left" ></i>
                 <div class="carousel" id="data3" >
 
                 </div>
-                <i class="fa-solid fa-angle-right" onclick="moveSroll('right', 3)"></i>
+                <i class="fa-solid fa-angle-right" ></i>
 
             </div>
 
@@ -90,7 +90,7 @@
 
 <div class="modal" id="modal">
     <div class="modal-content">
-        <span class="modal-close" onclick="toggleModal(0)">&times;</span>
+        <span class="modal-close" id="close_modal" >&times;</span>
         <div class="modal-header" id="modal-header">
 
         </div>
